# notes-lm--notebooklm-clone

./: .gitignore  .vercelignore  download_model.py  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 0fa7ddccb52a_uuid_refactor.py  129726075495_recreate_artifacts_table_with_new_enums.py  29becd6ba34b_add_artifacts_table.py  5fb79decabb8_make_some_chnages_in_artifacts_model.py  6030bd3aa108_drop_unique_constraint_on_source_id.py  a16c9e3b8504_add_evidence_pack_json_to_artifacts.py  b1c24e8ddb92_initial_schema.py  b583be26441b_.py
app/core/: ai_clients.py  config.py  deps.py  exceptions.py  logger.py  schemas.py  security.py  validator.py
app/core/providers/: __init__.py  embeddings.py  llm.py  storage.py
app/database/: session.py
app/features/artifacts/: __init__.py  artifact_context_builder.py  artifact_evidence_compressor.py  artifact_models.py  artifact_prompt_builder.py  context_builder.py  model.py  repository.py  router.py  schema.py  service.py  tasks.py
app/features/chat/: __init__.py  ai.py  memory.py  model.py  repository.py  router.py  schema.py  service.py
app/features/documents/: __init__.py  chunker.py  loader.py  model.py  repository.py  router.py  schema.py  service.py
app/features/notebooks/: __init__.py  model.py  repository.py  router.py  schema.py  service.py
app/features/sources/: loader.py  model.py  repository.py  router.py  schema.py  service.py  tasks.py
app/features/users/: model.py  repository.py  router.py  schema.py  service.py
