[project]
name = "lm-notes"
version = "0.1.0"
description = "googles notebooklm clone"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "alembic>=1.18.4",
    "argon2-cffi>=25.1.0",
    "asyncpg>=0.31.0",
    "beautifulsoup4>=4.15.0",
    "docx2txt>=0.9",
    "fastapi[standard]>=0.136.3",
    "google-api-python-client>=2.197.0",
    "html2text>=2025.4.15",
    "imagekitio>=5.6.0",
    "langchain>=1.3.9",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.7",
    "langchain-groq>=1.1.3",
    "langchain-huggingface>=1.2.2",
    "langchain-tavily>=0.2.18",
    "langchain-text-splitters>=1.1.2",
    "passlib>=1.7.4",
    "psycopg2-binary>=2.9.12",
    "pypdf>=6.13.2",
    "python-docx>=1.2.0",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.29",
    "qdrant-client>=1.18.0",
    "sentence-transformers>=5.5.1",
    "sqlalchemy[asyncio]>=2.0.50",
    "uvicorn>=0.48.0",
]
