[project]
name = "lm-notes"
version = "0.1.0"
description = "A notebooklm clone"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "alembic>=1.18.4",
    "argon2-cffi>=25.1.0",
    "asyncpg>=0.31.0",
    "beautifulsoup4>=4.15.0",
    "edge-tts>=7.2.8",
    "fastapi[standard]>=0.136.3",
    "google-api-python-client>=2.197.0",
    "imagekitio>=5.6.0",
    "langchain>=1.3.9",
    "langchain-community>=0.4.2",
    "langchain-groq>=1.1.3",
    "langchain-huggingface>=1.2.2",
    "langchain-tavily>=0.2.18",
    "langchain-text-splitters>=1.1.2",
    "passlib>=1.7.4",
    "psycopg2-binary>=2.9.12",
    "pydub>=0.25.1",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.29",
    "qdrant-client>=1.18.0",
    "sentence-transformers>=5.5.1",
    "sqlalchemy[asyncio]>=2.0.50",
    "uvicorn>=0.48.0",
    "youtube-transcript-api>=1.2.4",
]
